--- a/styles/style.css
+++ b/styles/style.css
@@ -59,12 +59,49 @@ margin: 50px auto;
     text-align: center;
     padding-top: 100px;
 }
+.ex-travel{
+    font-size: 4rem;
+    font-weight: 800;
+    color: #FFF;
+}
+.paragraph{
+    color: #FFF;
+}
+.btn-primary{
+    border-radius: 8px;
+background: rgba(255, 255, 255, 0.30);
+/* width: 1170px; */
+/* padding-right: 185px; */
+/* padding-left: 185px; */
+}
+
 /* second section */
 .popular{
     display: flex;
     gap: 50px;
     max-width: 1170px;
     margin: 50px auto;
+}
+.popular > div > h1{
+    color: #131313;
+    font-size: 2.6rem;
+    font-weight: 800;
+}
+.popular > div > li{
+    padding-top: 25px;
+}
+.popular > div > p,li{
+    color: rgba(19, 19, 24, 0.70);
+    gap: 24px;
+}
+.popular > div > input{
+    border-radius: 8px;
+background: #FF5400;
+width: 174px;
+height: 52px;
+color: #FFF;
+font-size: 1.4rem;
+font-weight: 800;
 }
 
 /* third-section */
@@ -76,7 +113,14 @@ margin: 50px auto;
 .destination-title{
     text-align: center;
 }
-
+.destination-title > h1{
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+.destination-title > P{
+    color: rgba(19, 19, 24, 0.70);
+    font-weight: 400;
+}
 /* all-images */
 .first-son{
     display: flex;
@@ -109,47 +153,137 @@ margin: 50px auto;
     margin-bottom: 24px;
 }
 
-
+/* fourth section */
+.choose{
+    margin: 100px auto;
+     max-width: 1170px;
+  }
+  .choose-title{
+     text-align: center;
+  }
+  .choose-title2{
+     margin-top: 0px;
+     margin-bottom: 10px;
+  }
+  .boxes{
+     display: flex;
+     justify-content: space-between;
+     margin-top: 45px;
+     gap: 24px;
+     
+  }
+  .box-h3{
+     color: #131318;
+     font-weight: 800;
+     
+     margin-top: 16px;
+     font-size: 1.20rem;
+  }
+  .box-p{
+     color: #5A5A5D;
+     font-weight: 400;
+  }
+  .box-1{
+     width: 573px;
+     height: 250px;
+     padding: 34px 50px 30px 30px;
+     border-radius: 15px;
+     border: 1px solid rgba(251, 181, 99, 0.20);
+     background: rgba(251, 181, 99, 0.05);
+  }
+  .box-2{
+     width: 573px;
+     height: 250px;
+     padding: 34px 50px 30px 30px;
+     border-radius: 15px;
+     border: 1px solid rgba(41, 206, 246, 0.20);
+     background: rgba(41, 206, 246, 0.05);
+  
+  
+  }
+  .box-3{
+   margin-left: 250px;
+   margin-top: 24px;
+     width: 573px;
+     height: 250px;
+     padding: 34px 50px 30px 30px;
+     border-radius: 15px;
+     border: 1px solid rgba(41, 206, 246, 0.20);
+     background: rgba(233, 68, 68, 0.05);
+  
+  
+  }
 /* last-section */
 .last-section{
     display: flex;
     justify-content: space-between;
     max-width: 1170px;
     margin: 50px auto;
+    gap: 20px;
     
 }
 .last-news{
-    margin: 40px 0px 40px 40px;
+    width: 474px;
+    height: 340px;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
 }
 .placeholder{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 10px;
-    margin-right: 65px;
+    gap: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.placeholder input{
+    border-radius: 8px;
+    border: navajowhite;
+    font-weight: 400;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    padding-left: 20px;
+    color: rgba(19, 19, 24, 0.30);
+    background: rgba(19, 19, 24, 0.05);
+}
+.btn-second{
+    border-radius: 8px;
+background: #FF5400;
+border: none;
+padding-top: 16px;
+padding-bottom: 16px;
+color: #FFF;
+font-weight: 800;
+font-size: 1.25rem;
+}
+.travelcom{
+    border-radius: 16px;
+    background: #FF5400;
+    width: 280px;
+    position: relative;
+    padding: 15px;
+    left: 353px;
+    bottom: 176px;
+    transform: rotate(-19deg);
+    text-align: center;
+}
+.travelcom p {
+    font-weight: 400;
+    font-size: 1.25rem;
+    margin-bottom: 0px;
+    color: #FFF;
+}
+.travelcom h3{
+    font-size: 1.7rem;
+    font-weight: 800;
+    margin-top: 0px;
+    margin-bottom: 15px;
+    color: #FFF
+}
 
 /* footer-section */
 .footer{
     background: rgba(19, 19, 24, 0.05);
     width: 1440px;
-/* height: 400px; */
 text-align: center;
-/* justify-content: center; */
 }
 .footer-title{
     display: flex;
@@ -157,6 +291,64 @@ text-align: center;
     justify-content: center;
     gap: 15px;
 }
-.footer-icon{
-
+.footer-icon img{
+    padding-right: 23px;
+    width: 25px;
+    padding-bottom: 50px;
 }
+.hr-1{
+    width: 872px;
+    /* padding-bottom: 50px; */
+}
+.end{
+    padding-top: 50px;
+}
+
+
+/* responsive for mobile */
+@media screen and (max-width:600px){
+        .boxes{
+            flex-direction: column;
+        }
+        .box-1,
+        .box-2,
+        .box-3
+        {
+            max-width: 100%;
+            padding-right: 8px;
+            margin-right: 8px;
+        }
+        .box-3{
+            margin: 0px;
+            margin-top: 22px;
+        }
+
+        .last-news{
+            max-width: 90%;
+        padding: 20px;
+        margin-right: 5px;
+        margin-left: 4px;
+        }
+        .last-section{
+            flex-direction: column;
+        }
+        .first-son,
+        .second-son,
+        .third-son{
+            flex-direction: column;
+        }
+        .first-son img,
+        .second-son img,
+        .third-son img{
+            max-width: 100%;
+        }
+        .popular{
+            flex-direction: column; 
+        margin-left: 6px;
+        margin-right: 5px;
+    
+        }
+        .popular img {
+            max-width: 100%;
+        }
+    }
