--- a/styles/style.css
+++ b/styles/style.css
@@ -70,9 +70,11 @@ margin: 50px auto;
 .btn-primary{
     border-radius: 8px;
 background: rgba(255, 255, 255, 0.30);
-/* width: 1170px; */
-/* padding-right: 185px; */
-/* padding-left: 185px; */
+margin-left: 180px;
+margin-right: 180px;
+}
+.btn-primary input{
+    padding: 16px;
 }
 
 /* second section */
@@ -164,6 +166,12 @@ font-weight: 800;
   .choose-title2{
      margin-top: 0px;
      margin-bottom: 10px;
+     font-size: 2.5rem;
+     font-weight: 800;
+  }
+  .all-p{
+    color: rgba(19, 19, 24, 0.70);
+    font-weight: 400;
   }
   .boxes{
      display: flex;
@@ -298,7 +306,6 @@ text-align: center;
 }
 .hr-1{
     width: 872px;
-    /* padding-bottom: 50px; */
 }
 .end{
     padding-top: 50px;
@@ -350,5 +357,9 @@ text-align: center;
         }
         .popular img {
             max-width: 100%;
+        }
+        .footer-title{
+            display: grid;
+            /* grid-template-columns: repeat(1, 1fr); */
         }
     }
