--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ nav{
     display: flex;
     align-items: center;
     gap: 10px;
+    justify-content: center;
     
 }
 nav > ul{
@@ -27,25 +28,24 @@ nav li {
 nav li a{
     text-decoration: none;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: #424247;
 }
 .travel{
     font-weight: 800;
-    font-size: 36px;
+    font-size: 2.25rem;
     color: #FF5400;
 }
 .nature{
     font-weight: 800;
-    font-size: 36px;
+    font-size: 2.25rem;
     padding-right: 50px;
-}
-.img{
-    width: 48px;
-height: 56px;
 }
 .home{
     color: #FF5400;
+}
+.vector{
+    display: none;
 }
 
 /* main start */
@@ -67,15 +67,55 @@ margin: 50px auto;
 .paragraph{
     color: #FFF;
 }
-.btn-primary{
+.banner{
+    border-radius: 7.99px;
+    background: rgba(255, 255, 255, 0.30);
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-left: 155px;
+    margin-right: 155px;
+    padding: 13px;
+}
+.select-name{
+    margin-right: 24px;
     border-radius: 8px;
-background: rgba(255, 255, 255, 0.30);
-margin-left: 180px;
-margin-right: 180px;
+    background: #FFF;
+    border: none;
+    font-weight: 400;
+    padding: 16px 84px 16px 16px;
+    
 }
-.btn-primary input{
-    padding: 16px;
+.find{
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    background: #FF5400;
+    padding: 14px 10px 14px 10px;
 }
+.find-now{
+    background-color: #FF5400;
+    border: none;
+    color: #FFF;
+}
+.where{
+    padding: 16px 84px 16px 16px;
+    border-radius: 8px;
+    background: #FFF;
+    border: none;
+    font-weight: 400;
+}
+
+
+.when{
+    margin-right: 24px;
+    border-radius: 8px;
+    background: #FFF;
+    border: none;
+    font-weight: 400;
+    padding: 16px 84px 16px 16px;
+}
+
 
 /* second section */
 .popular{
@@ -284,14 +324,24 @@ font-size: 1.25rem;
     font-weight: 800;
     margin-top: 0px;
     margin-bottom: 15px;
-    color: #FFF
+    color: #FFF;
+
 }
 
 /* footer-section */
 .footer{
     background: rgba(19, 19, 24, 0.05);
-    width: 1440px;
+    max-width: 1440px;
 text-align: center;
+}
+.footer h3{
+    font-size: 2rem;
+    font-weight: 800;
+}
+.footer p{
+    color: #5A5A5D;
+    font-weight: 400;
+    font-size: 1rem;
 }
 .footer-title{
     display: flex;
@@ -305,7 +355,8 @@ text-align: center;
     padding-bottom: 50px;
 }
 .hr-1{
-    width: 872px;
+   margin-left: 285px;
+   margin-right: 285px;
 }
 .end{
     padding-top: 50px;
@@ -321,7 +372,7 @@ text-align: center;
         .box-2,
         .box-3
         {
-            max-width: 100%;
+            max-width: 95%;
             padding-right: 8px;
             margin-right: 8px;
         }
@@ -358,8 +409,45 @@ text-align: center;
         .popular img {
             max-width: 100%;
         }
-        .footer-title{
-            display: grid;
-            /* grid-template-columns: repeat(1, 1fr); */
+        .hr-1{
+            margin-left: 30px;
+            margin-right: 30px;
         }
+        .last-section img{
+            max-width: 95%;
+        }
+        .travelcom{
+            transform: none;
+            position: static;
+        }
+        nav{
+            flex-direction: column;
+            /* align-items: center; */
+        }
+        nav ul li a{
+            display: none;
+        }
+        nav .vector{
+            display: flex;
+        }
+        .explore{
+            max-width: 100%;
+            background-position: center;
+        }
+        .where, .when, .select-name, .find{
+            width: 150px;
+            padding: 8px;
+        }
+        .where, .find{
+            height: 15px;
+        }
+        .banner{
+            flex-direction: column;
+            margin-left: 28px;
+            margin-right: 28px;
+        }
+        .ex-travel{
+            font-size: 1.5rem;
+        }
+        
     }
