--- a/styles/style.css
+++ b/styles/style.css
@@ -342,12 +342,14 @@ text-align: center;
     color: #5A5A5D;
     font-weight: 400;
     font-size: 1rem;
+    margin-bottom: 30px;
 }
 .footer-title{
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15px;
+    padding-top: 40px;
 }
 .footer-icon img{
     padding-right: 23px;
@@ -360,6 +362,7 @@ text-align: center;
 }
 .end{
     padding-top: 50px;
+    padding-bottom: 100px;
 }
 
 
